# engineering-excellence-agentic-ai

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: agents_router.py  auth.py  deps.py  mappers.py  repos.py  repositories.py  scans.py  schemas.py  security_router.py  websocket.py
backend/app/api/routes/: github.py  review.py
backend/app/application/: _patch_apply.py  architecture_drift.py  breaking_change_detector.py  orchestrator.py  patch_engine.py  retrieval_tuning.py  safe_pr_service.py  scan_config_resolver.py  scan_event_bus.py  scan_orchestrator.py  scoring.py  scoring_engine.py  source_preparation.py  tool_interfaces.py  trend_analysis.py  trends.py  validation_pipeline.py  virtual_workspace.py
backend/app/application/agents/: __init__.py  architect_agent.py  base.py  developer_agent.py  llm_schemas.py  qa_agent.py  security_agent.py  sre_agent.py
backend/app/core/: __init__.py  config.py  docs.py  exceptions.py  logging.py  security.py
backend/app/domain/entities/: __init__.py
backend/app/domain/enums/: __init__.py
backend/app/domain/value_objects/: __init__.py
backend/app/infrastructure/: arq_worker.py  background_tasks.py  github_clone.py  local_repo_validator.py  redis_client.py  websocket_manager.py
backend/app/middleware/: request_id.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py
backend/tests/integration/: test_orchestrator.py
(+150 files in other folders)
